# github-projectv2

./: .gitignore  .pre-commit-config.yaml  EXAMPLES.md  LICENSE  README.md  pyproject.toml
github-projectv2/: organization.py  repository.py
github_projectv2/: base.py  comment.py  field.py  item.py  label.py  milestone.py  option.py  organization.py  project.py  repository.py  requirements.txt  search.py  user.py  view.py
github_projectv2/queries/partial/: draftissue_item.graphql  fields.graphql  issue-timeline-events.graphql  issue_item.graphql  issue_item_slim.graphql  item-project-node-id.graphql  item.graphql  repository.graphql  tracked-in-issues.graphql  tracked-issues.graphql
github_projectv2/queries/project/: get.graphql  get_field.graphql  get_fields.graphql  get_items.graphql  (+1 more)
github_projectv2/timeline_event/: AddedToProjectEvent.py  AssignedEvent.py  ClosedEvent.py  CommentDeletedEvent.py  CrossReferencedEvent.py  DemilestonedEvent.py  IssueComment.py  IssueTypeAddedEvent.py  IssueTypeChangedEvent.py  IssueTypeRemovedEvent.py  LabeledEvent.py  MarkedAsDuplicateEvent.py  MentionedEvent.py  MilestonedEvent.py  MovedColumnsInProjectEvent.py  ParentIssueAddedEvent.py  ParentIssueRemovedEvent.py  PinnedEvent.py  ReferencedEvent.py  RenamedTitleEvent.py  ReopenedEvent.py  SubIssueAddedEvent.py  SubIssueRemovedEvent.py  SubscribedEvent.py  TransferredEvent.py  UnassignedEvent.py  UnlabeledEvent.py  UnsubscribedEvent.py  __init__.py
projectv2/: base.py  field.py  item.py  label.py  option.py  project.py  requirements.txt  user.py
tests/: test_project.py
(+30 files in other folders)
