[tool.poetry]
name = "github-projectv2"
version = "0.7.16"
description = ""
authors = ["Chris Cornutt <enygma@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
